@@ -1,3 +1,10 @@
+2006-10-09  Gary Benson  <gbenson@redhat.com>
+
+	* java/net/ServerSocket.java
+	(implAccept): Add security check.
+	(accept): Close socket if security check fails.
+	(setSocketFactory): Add security check and already-set check.
+
 2006-10-09  Roman Kennke  <kennke@aicas.com>
 
 	PR 29325
